# aiCalamba

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: main.yaml
src/: index.html  main.rs
