[package]
name = "aiCalamba"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["multipart"] }
base64 = "0.22.1"
env_logger = "0.11.5"
log = "0.4.22"
openai-api-rs = "5.0.9"
serde = "1.0.210"
thirtyfour = "0.34.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
url = "2.5.2"
