[package]
name = "aicalamba"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["multipart"] }
base64 = "0.22.1"
chrono = "0.4.38"
env_logger = "0.11.5"
icalendar = "0.16.8"
jpeg-decoder = "0.3.1"
log = "0.4.22"
openai-api-rs = "5.0.9"
reqwest = "0.12.7"
serde = "1.0.210"
thirtyfour = "0.34.0"
tokio = { version = "1.40.0" }
url = "2.5.2"
